--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -36,8 +36,8 @@ meshery-custom-end -->
   <div class="footer-icons-list">
 
     <div class="footer-icons">
-      <a class="social__link social__link--mail" href="mailto:community@layer5.io" width="50px" height="50px">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+      <a class="social__link social__link--mail" href="mailto:community@layer5.io">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="50px" height="50px" >
           <path fill="currentColor" d="M326.7,166.2c2-1.6,5-0.1,5,2.4v106c0,13.7-11.1,24.9-24.9,24.9H91.2c-13.7,0-24.9-11.1-24.9-24.9v-106
             c0-2.6,3-4,5-2.4c11.6,9,27,20.5,79.9,58.9c10.9,8,29.4,24.8,47.8,24.7c18.5,0.2,37.3-17,47.8-24.7
             C299.7,186.7,315.1,175.2,326.7,166.2z M199,233.2c12,0.2,29.3-15.1,38.1-21.5c68.8-49.9,74-54.3,89.9-66.7c3-2.3,4.8-6,4.8-9.8
@@ -49,8 +49,8 @@ meshery-custom-end -->
     </div>
  
     <div class="footer-icons">
-      <a class="social__link social__link--slack" href="http://slack.layer5.io/" width="50px" height="50px">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+      <a class="social__link social__link--slack" href="http://slack.layer5.io/" >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="50px" height="50px" >
           <path fill="currentColor" stroke="currentColor" stroke-width="3" stroke-miterlimit="10" d="M214.6,76.3c-2.7-0.3-5.7,0.3-8.1,1.2c-10.5,3.6-16.2,15-12.6,25.5l8.4,24.9l-48,16.2l-7.8-24
             c-3.6-10.5-15-16.2-25.5-12.6c-10.5,3.6-16.5,15-12.9,25.5l7.8,23.7L91,165.1c-10.5,3.6-16.2,15.3-12.6,25.8s15,16.2,25.5,12.6
             l24.9-8.1l16.2,47.7l-24,7.8c-10.5,3.6-16.2,15-12.6,25.5c3.6,10.5,15,16.5,25.5,12.9l23.7-7.8l8.4,24.6
@@ -78,8 +78,8 @@ meshery-custom-end -->
     </div>
     
     <div class="footer-icons">
-      <a class="social__link social__link--github" href="https://github.com/layer5io" width="50px" height="50px">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+      <a class="social__link social__link--github" href="https://github.com/layer5io" >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="50px" height="50px">
           <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M203.9,60c-75.6,0-137,61.3-137,137c0,60.5,39.2,111.9,93.7,130c6.8,1.3,9.3-3,9.3-6.6c0-3.3-0.1-11.9-0.2-23.3
          c-38.1,8.3-46.1-18.4-46.1-18.4c-6.2-15.8-15.2-20-15.2-20c-12.4-8.5,0.9-8.3,0.9-8.3c13.7,1,21,14.1,21,14.1
          c12.2,20.9,32.1,14.9,39.9,11.4c1.2-8.9,4.8-14.9,8.7-18.3c-30.4-3.5-62.4-15.2-62.4-67.7c0-15,5.3-27.2,14.1-36.8
@@ -92,19 +92,19 @@ meshery-custom-end -->
     </div>
 
     <div class="footer-icons">
-      <a class="social__link social__link--youtube" href="https://www.youtube.com/playlist?list=PL3A-A6hPO2IMPPqVjuzgqNU5xwnFFn3n0" width="50px" height="50px">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+      <a class="social__link social__link--youtube" href="https://www.youtube.com/playlist?list=PL3A-A6hPO2IMPPqVjuzgqNU5xwnFFn3n0" >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="50px" height="50px">
           <path fill="currentColor" d="M358.3,119.9c-3.8-14.3-15-25.6-29.2-29.4C303.3,83.6,200,83.6,200,83.6s-103.3,0-129.1,6.9
            c-14.2,3.8-25.4,15.1-29.2,29.4c-6.9,25.9-6.9,80.1-6.9,80.1s0,54.1,6.9,80.1c3.8,14.3,15,25.6,29.2,29.4c25.8,7,129.1,7,129.1,7
            s103.3,0,129.1-7c14.2-3.8,25.4-15.1,29.2-29.4c6.9-25.9,6.9-80.1,6.9-80.1S365.2,145.9,358.3,119.9z"/>
-           <polygon fill="#FFFFFF" points="166.2,249.1 252.6,200 166.2,150.9 "/>
+           <polygon fill="black" points="166.2,249.1 252.6,200 166.2,150.9 "/>
         </svg>
       <span class="footer-icons-text">Watch community meeting recordings</span></a>
     </div>
 
     <div class="footer-icons">
-      <a class="social__link social__link--docker" href="https://hub.docker.com/u/layer5/" width="50px" height="50px">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+      <a class="social__link social__link--docker" href="https://hub.docker.com/u/layer5/">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400" width="50px" height="50px">
           <path fill="currentColor" stroke="#FFFFFF" stroke-miterlimit="10" d="M369.8,159.9c-11.4-6.7-26.6-7.5-39.4-3.7c-1.6-13.8-10.6-25.8-21.3-34.3l-4.3-3.5l-3.7,4.3
            c-7.2,8.3-9.3,22.1-8.3,32.7c0.8,7.7,3.2,15.7,8,22.1c-3.7,2.1-7.7,5.1-11.4,6.4c-7.5,2.7-15.7,5.3-23.7,5.3h-17.8v-37.5h-34.6
            V85.1h-39.9v31.9h-66.5v34.6H72.2v37.3H42.4l-0.5,4c-1.3,17,0.8,33.5,8,49.2l2.9,5.9l0.3,0.5c21,35.7,57.8,50.6,97.9,50.6
