Signedoff: raghavaggarwal99<ragha170103048@iitg.ac.in>
Signed-off-by: raghavaggarwal99 <ragha170103048@iitg.ac.in>

Signed-off: raghavaggarwal99<ragha170103048@iitg.ac.in>

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -10460,7 +10460,14 @@ button.bg-dark:focus {
 .text-center {
     text-align: center!important;
     justify-content: center;
-    margin-left: 550px;
+    position: relative;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+  	
+	margin: auto;
+  
 }
 
 @media(min-width:576px) {
